--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,5 @@
 ﻿# CMakeList.txt : CMake project for sp-Engine, include source and define
 # project specific logic here.
-#
 cmake_minimum_required(VERSION 3.8)
 
 # Enable Hot Reload for MSVC compilers if supported.
@@ -13,7 +12,27 @@ project(sp-Engine VERSION 1.0.0)
 
 # SDL3
 # Windows: add SDL3_Dir to user varaiables and point to the SDL3 folder
-find_package(SDL3 REQUIRED)
+find_package(SDL3 QUIET)
+
+if(SDL3_FOUND)
+    message(STATUS "Using SDL3 via find_package")
+endif()
+
+if(NOT SDL3_FOUND)
+    include(FetchContent)
+    set(SDL_SHARED TRUE CACHE BOOL "Build a SDL shared library (if available)")
+    set(SDL_STATIC TRUE CACHE BOOL "Build a SDL static library (if available)")
+    FetchContent_Declare(
+        SDL
+        GIT_REPOSITORY https://github.com/libsdl-org/SDL.git
+        GIT_TAG main  # Replace this with a particular git tag or git hash
+        GIT_SHALLOW TRUE
+        GIT_PROGRESS TRUE
+    )
+    message(STATUS "Using SDL3 via FetchContent")
+    FetchContent_MakeAvailable(SDL)
+    set_property(DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/_deps/sdl-src" PROPERTY EXCLUDE_FROM_ALL TRUE)
+endif()
 
 # Add source to this project's executable.
 add_executable(sp-Engine "main.cpp" "include/")
